--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "rest-countries",
     "version": "1.0.0",
     "description": "Landing page de búsqueda de países.",
-    "main": "index.js",
+    "main": "src/index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
+        "deploy": "gh-pages -d src"
     },
     "repository": {
         "type": "git",
@@ -20,5 +21,5 @@
     "bugs": {
         "url": "https://github.com/aneacevedo/rest-countries/issues"
     },
-    "homepage": "https://github.com/aneacevedo/rest-countries"
+    "homepage": "https://aneacevedo.github.io/rest-countries"
 }
